--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,19 @@
       ]
     },
     {
-      "source": "/src/(.*)",
+      "source": "/src/styles/(.*)\\.css",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=3600" }
+      ]
+    },
+    {
+      "source": "/src/scripts/(.*)\\.js",
+      "headers": [
+        { "key": "Cache-Control", "value": "public, max-age=3600" }
+      ]
+    },
+    {
+      "source": "/favicon.ico",
       "headers": [
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
       ]
@@ -22,3 +34,4 @@
     }
   ]
 }
+
